refactor from java 17 -> 8